@@ -18,8 +18,8 @@ schema objects (\code{labkey.getSchema}).
 \tabular{ll}{
 Package: \tab Rlabkey\cr
 Type: \tab Package\cr
-Version: \tab 2.12.0\cr
-Date: \tab 2023-08-18\cr
+Version: \tab 2.13.0\cr
+Date: \tab 2023-11-03\cr
 License: \tab Apache License 2.0\cr
 LazyLoad: \tab yes\cr
 }
